tests/NormalTests/paczka1/small_fuzzy/81191907.err
Error in line 1: ZHaL8Mk A590 57,1
Error in line 2: o5w47e5UX2F A558 96,1
Error in line 8: o5w47e5UX2F A287 25,2
Error in line 5: S990 A558 79,2
